Release Notes

* 5/24/2016
  * changes for failedAttempt and hs06sec in job

* 5/18/2016
  * removed maxinputsize from JG

* 5/16/2016
  * fixed ZeroDivision error in AtlasPTB
  * changed AtlasPTB to skip data locality check when no nucleus has data

* 5/12/2016
  * changed t1weight based on IO intensity

* 5/11/2016
  * added getFailureCountsForTask_JEDI
  * changed lifetime of um.log to 365 days

* 5/6/2016
  * changed JG not to lock when nQueued<nQueueLimit
  * set maxNumJobs=nQueueLimit/10 when nQueued<nQueueLimit

* 5/4/2016
  * fixed lockedBy IS NULL in getTaskDatasetsWithID_JEDI 
  * changed lifetime of transient datasets to 14 days

* 5/3/2016
  * changed job brokerages to use mergeRamCount for pmerge

* 5/2/2016
  * updated to second version of network brokerage
  * changed AtlasPJB to ignore t1w for pmerge
  * avoid assigning tasks to nuclei with large transfer backlogs
  * fixed taskRW in AtlasPTB

* 4/28/2016
  * changed retryTask to update t_task.start_time

* 4/27/2016
  * increased nQueueLimit for group to 40k
  * changed JG not to lock counter for pmerge or nQueued<nQueueLimit
  * fixed JG for uniform tasks with ES and non-ES

* 4/26/2016
  * resetting walltimeunit when re-refining tasks
  * updates/protections for new network metrics sources

* 4/25/2016
  * changed AtlasPTB to respect dst: when input is unavailable

* 4/20/2016
  * fixed unlockTasks to release picked files
  * introduced 5% of tolerance in minRamCount
  * introduced MBPerCoreFixed
  * changed JG to set maxWalltime=24h to scouts with cpuTime=0 or None

* 4/19/2016
  * fixed getScoutJobData to use jobs with nEvents<10 but wallTime>6h

* 4/18/2016
  * using 95th percentile for cpuTime
  * fixed dst:XYZ to use nucleus instead of PQ

* 4/14/2016
  * using smaller minTotalWalltime for WQ with site in AtlasPJT

* 4/13/2016
  * changed resume/pauseTask to  activate/throttle jobs
  * fixed JG for pending tasks to release lock
  * fixed dump in ThreadUtils