@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/25/2016
+  * added writeInputToFile
+
 * 5/24/2016
   * changes for failedAttempt and hs06sec in job
 
